--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>
         Nova parada para o código
         Estou feliz em aprender a programar em HTML/CSS e JavaScript.
+        Nova parada para o código
     </h1>
 </body>
 </html>
