--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
         Estou feliz em aprender a programar em HTML/CSS e JavaScript.
         Nova parada para o código
     </h1>
+    
 </body>
+    <script>
+        console.log("Olá mundo!")
+    </script>
 </html>
