--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <script>
         console.log("Olá mundo!")
         console.log("Olá mundo!2")
+        console.log("Olá mundo!3")
     </script>
 </html>
